--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,20 @@
     <string name="add">+</string>
     <string name="remove">-</string>
 
-    <string name="homeFragment">Welcome</string>
+    <string name="homeFragment">Už nikdy nezabúdaj na recepty.</string>
     <string name="searchFragment">Here you can search through recipes.</string>
     <string name="myRecipesFragment">Here you can see your recipes.</string>
     <string name="profileFragment">Here you can see your profile.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--  DETAIL RECIPE ACTIVITY -->
+    <string name="recipe_menu_bookmark">Obľúbiť</string>
+    <string name="recipe_menu_bookmarked">Obľúbené</string>
+    <string name="recipe_menu_addNote">Pridať poznámku</string>
+    <string name="recipe_menu_addedNote">Zobraziť poznámku</string>
+    <string name="recipe_noteDialog_addNoteHint">Zadaj poznámku...</string>
     <string name="detail_recipeName">[RECIPE NAME]</string>
+    <string name="detail_PrepTime">Čas prípravy</string>
     <string name="detail_Ingredients">Ingrediencie</string>
     <string name="detail_Steps">Postup</string>
     <string name="detail_rateBtn_text">Hodnotiť</string>
@@ -54,4 +60,15 @@
     <string name="nav_myRecipes">Moje Recepty</string>
     <string name="nav_profile">Profil</string>
 
+    <!-- HOME FRAGMENT -->
+    <string name="chip_timePeriod_week">Týždeň</string>
+    <string name="chip_timePeriod_month">Mesiac</string>
+    <string name="chip_timePeriod_year">Rok</string>
+    <string name="chip_timePeriod_all">Celý čas</string>
+    <string name="homefragment_textView_latest">Najnovšie recepty</string>
+    <string name="homefragment_textView_best">Najlepšie recepty</string>
+    <string name="homeFragment_miniText">Vitaj na domovskej stránke aplikácie Nezafoodaj.</string>
+
+    <!-- RECIPE LIST -->
+    <string name="recipeList_finalImage_conDesc">Náhľad vysledného obrázka receptu</string>"
 </resources>
