--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Nezafoodaj</string>
     <string name="activityName_AddRecipe">Tvorba Receptu</string>
     <string name="activityName_RecipeDetail">Recept</string>
+    <string name="activityName_UserSettings">Nastavenia</string>
 
     <string name="add">+</string>
     <string name="remove">-</string>
@@ -12,6 +13,12 @@
     <string name="profileFragment">Here you can see your profile.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- USER SETTINGS ACTIVITY -->
+    <string name="userSettings_textView_name">Meno</string>
+    <string name="userSettings_textView_age">Vek</string>
+    <string name="userSettings_textView_gender">Pohlavie</string>
+    <string name="rb_gender_male">Muž</string>
+    <string name="rb_gender_female">Žena</string>
     <!--  DETAIL RECIPE ACTIVITY -->
     <string name="recipe_menu_bookmark">Obľúbiť</string>
     <string name="recipe_menu_bookmarked">Obľúbené</string>
@@ -57,6 +64,7 @@
     <!-- MENU -->
     <string name="nav_home">Domov</string>
     <string name="nav_search">Hľadať</string>
+    <string name="nav_addRecipe">Pridať Recept</string>
     <string name="nav_myRecipes">Moje Recepty</string>
     <string name="nav_profile">Profil</string>
 
@@ -67,7 +75,8 @@
     <string name="chip_timePeriod_all">Celý čas</string>
     <string name="homefragment_textView_latest">Najnovšie recepty</string>
     <string name="homefragment_textView_best">Najlepšie recepty</string>
-    <string name="homeFragment_miniText">Vitaj na domovskej stránke aplikácie Nezafoodaj.</string>
+    <string name="homeFragment_miniText">Vitaj na domovskej stránke aplikácie Nezafoodaj.
+    Nechaj sa inšpirovať vybranými receptami.</string>
 
     <!-- RECIPE LIST -->
     <string name="recipeList_finalImage_conDesc">Náhľad vysledného obrázka receptu</string>"
